fix: refactor